# vmi-tutorial-24

./: .gitignore  Makefile  README.md  _CoqProject  install_local.sh  iris-vmi-example.opam
.devcontainer/: devcontainer.json
examples/: basic.v  coq_intro.v  ghost_state.v  invariants.v
